base/wallet-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-api-deployment
  labels:
    app: wallet-api
spec:
  progressDeadlineSeconds: 200  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: wallet-api
  template:
    metadata:
      labels:
        app: wallet-api
    spec:
      containers:
      - name: wallet-api
        image: 314146307135.dkr.ecr.eu-west-1.amazonaws.com/wallet-api:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
