base/wallet-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wallet-api-service
  labels:
    app: wallet-api
spec:
  selector:
    app: wallet-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
