base/wallet-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - wallet-api-dev.vpd.life
    secretName: wallet-tls-secret
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wallet-api-service
                port:
                  number: 80
